# mission-ops-lite

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CREATOR_HANDOFF.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  QA_REPORT.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css  types.ts
src/mission_ops_lite/: __init__.py  api.py  catalog.py  celestrak.py  contact_windows.py  models.py  normalization.py  propagation.py  simulated_telemetry.py  store.py
tests/: test_pr1_catalog.py  test_pr2_sqlite_cache.py  test_pr3_sgp4_position.py  test_pr4_contact_windows.py  test_pr6_event_workflow.py  test_pr6_policy_comparison.py  test_pr6_simulated_telemetry.py
