[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mission-ops-lite"
version = "0.1.0"
description = "Private-first mission-data / operations-policy simulation platform. PR1 focuses on CelesTrak public satellite catalog ingestion."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110,<1.0",
  "httpx>=0.27,<1.0",
  "pydantic>=2.6,<3.0",
  "uvicorn[standard]>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
